adds Contact Form fetch functionality and success/error message

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,33 @@ button.ui.button:hover {
 
 
 
+ /* CONTACT SUCCESS AND ERROR */
+
+ .success {
+   text-align: center;
+   height: 0px;
+   opacity: 0;
+   transition: all .25s ease-out;
+ }
+
+ 
+ .success h3 {
+   font-size: 32px;
+   color: rgb(151, 37, 204);
+ }
+
+ .error {
+  text-align: center;
+  height: 0px;
+  opacity: 0;
+  transition: all .25s ease-out;
+ }
+
+ .error h3 {
+   font-size: 32px;
+   color: red;
+ }
+ .show {
+  height: 140px;
+  opacity: 1;
+}
