--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -53,6 +53,9 @@
         font-size: 1.2em;
         margin-top: 0.5em;
     }
+    .right.floated.six.wide.column {
+        text-align: center;
+    }
 }
 
 
