--- a/src/assets/styles/header.css
+++ b/src/assets/styles/header.css
@@ -12,7 +12,6 @@
    align-items: center;
    justify-content: space-between;
    width: 100%;
-   
    background: var(--primary-bg);
 }
 
@@ -25,9 +24,9 @@
     color: rgba(231, 120, 120, 0.678);
 }
 
-.ui.secondary.inverted.menu a.active.item{
+.header-container .ui.secondary.inverted.menu a.active.item{
     background: -webkit-linear-gradient(0deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
-    -webkit-background-clip: text;
+    -webkit-background-clip: text; 
     -webkit-text-fill-color: transparent;
     border-color: rgba(131,58,180,1);
 }
@@ -36,6 +35,7 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+
 }
 .hamburger{
     display: none;
